---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
  --> ASYNC116.py:11:11
   |
10 |     # These examples are probably not meant to ever wake up:
11 |     await trio.sleep(100000)  # error: 116, "async"
   |           ^^^^^^^^^^^^^^^^^^
12 |
13 |     # 'inf literal' overflow trick
   |
help: Replace with `trio.sleep_forever()`
   |
 8 ~     import trio
 9 |
10 |     # These examples are probably not meant to ever wake up:
11 ~     await trio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
  --> ASYNC116.py:14:11
   |
13 |     # 'inf literal' overflow trick
14 |     await trio.sleep(1e999)  # error: 116, "async"
   |           ^^^^^^^^^^^^^^^^^
15 |
16 |     await trio.sleep(86399)
   |
help: Replace with `trio.sleep_forever()`
   |
 8 ~     import trio
 9 |
 …
13 |     # 'inf literal' overflow trick
14 ~     await trio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
  --> ASYNC116.py:18:11
   |
16 |     await trio.sleep(86399)
17 |     await trio.sleep(86400)
18 |     await trio.sleep(86400.01)  # error: 116, "async"
   |           ^^^^^^^^^^^^^^^^^^^^
19 |     await trio.sleep(86401)  # error: 116, "async"
   |
help: Replace with `trio.sleep_forever()`
   |
 8 ~     import trio
 9 |
 …
17 |     await trio.sleep(86400)
18 ~     await trio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
  --> ASYNC116.py:19:11
   |
17 |     await trio.sleep(86400)
18 |     await trio.sleep(86400.01)  # error: 116, "async"
19 |     await trio.sleep(86401)  # error: 116, "async"
   |           ^^^^^^^^^^^^^^^^^
20 |
21 |     await trio.sleep(-1)  # will raise a runtime error
   |
help: Replace with `trio.sleep_forever()`
   |
 8 ~     import trio
 9 |
 …
18 |     await trio.sleep(86400.01)  # error: 116, "async"
19 ~     await trio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
  --> ASYNC116.py:48:5
   |
47 |     # does not require the call to be awaited, nor in an async fun
48 |     trio.sleep(86401)  # error: 116, "async"
   |     ^^^^^^^^^^^^^^^^^
49 |     # also checks that we don't break visit_Call
50 |     trio.run(trio.sleep(86401))  # error: 116, "async"
   |
help: Replace with `trio.sleep_forever()`
   |
45 ~     import trio
46 |
47 |     # does not require the call to be awaited, nor in an async fun
48 ~     trio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
  --> ASYNC116.py:50:14
   |
48 |     trio.sleep(86401)  # error: 116, "async"
49 |     # also checks that we don't break visit_Call
50 |     trio.run(trio.sleep(86401))  # error: 116, "async"
   |              ^^^^^^^^^^^^^^^^^
help: Replace with `trio.sleep_forever()`
   |
45 ~     import trio
46 |
 …
49 |     # also checks that we don't break visit_Call
50 ~     trio.run(trio.sleep_forever())  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
  --> ASYNC116.py:57:11
   |
56 |     # catch from import
57 |     await sleep(86401)  # error: 116, "async"
   |           ^^^^^^^^^^^^
help: Replace with `trio.sleep_forever()`
   |
 5 + from trio import sleep_forever
 6 + 
 7 |
 …
57 |     # catch from import
58 ~     await sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `anyio.sleep()` with >24 hour interval should usually be `anyio.sleep_forever()`
  --> ASYNC116.py:64:11
   |
63 |     # These examples are probably not meant to ever wake up:
64 |     await anyio.sleep(100000)  # error: 116, "async"
   |           ^^^^^^^^^^^^^^^^^^^
65 |
66 |     # 'inf literal' overflow trick
   |
help: Replace with `anyio.sleep_forever()`
   |
61 ~     import anyio
62 |
63 |     # These examples are probably not meant to ever wake up:
64 ~     await anyio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `anyio.sleep()` with >24 hour interval should usually be `anyio.sleep_forever()`
  --> ASYNC116.py:67:11
   |
66 |     # 'inf literal' overflow trick
67 |     await anyio.sleep(1e999)  # error: 116, "async"
   |           ^^^^^^^^^^^^^^^^^^
68 |
69 |     await anyio.sleep(86399)
   |
help: Replace with `anyio.sleep_forever()`
   |
61 ~     import anyio
62 |
 …
66 |     # 'inf literal' overflow trick
67 ~     await anyio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `anyio.sleep()` with >24 hour interval should usually be `anyio.sleep_forever()`
  --> ASYNC116.py:71:11
   |
69 |     await anyio.sleep(86399)
70 |     await anyio.sleep(86400)
71 |     await anyio.sleep(86400.01)  # error: 116, "async"
   |           ^^^^^^^^^^^^^^^^^^^^^
72 |     await anyio.sleep(86401)  # error: 116, "async"
   |
help: Replace with `anyio.sleep_forever()`
   |
61 ~     import anyio
62 |
 …
70 |     await anyio.sleep(86400)
71 ~     await anyio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `anyio.sleep()` with >24 hour interval should usually be `anyio.sleep_forever()`
  --> ASYNC116.py:72:11
   |
70 |     await anyio.sleep(86400)
71 |     await anyio.sleep(86400.01)  # error: 116, "async"
72 |     await anyio.sleep(86401)  # error: 116, "async"
   |           ^^^^^^^^^^^^^^^^^^
73 |
74 |     await anyio.sleep(-1)  # will raise a runtime error
   |
help: Replace with `anyio.sleep_forever()`
   |
61 ~     import anyio
62 |
 …
71 |     await anyio.sleep(86400.01)  # error: 116, "async"
72 ~     await anyio.sleep_forever()  # error: 116, "async"
   |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `anyio.sleep()` with >24 hour interval should usually be `anyio.sleep_forever()`
   --> ASYNC116.py:101:5
    |
100 |     # does not require the call to be awaited, nor in an async fun
101 |     anyio.sleep(86401)  # error: 116, "async"
    |     ^^^^^^^^^^^^^^^^^^
102 |     # also checks that we don't break visit_Call
103 |     anyio.run(anyio.sleep(86401))  # error: 116, "async"
    |
help: Replace with `anyio.sleep_forever()`
    |
 98 ~     import anyio
 99 |
100 |     # does not require the call to be awaited, nor in an async fun
101 ~     anyio.sleep_forever()  # error: 116, "async"
    |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `anyio.sleep()` with >24 hour interval should usually be `anyio.sleep_forever()`
   --> ASYNC116.py:103:15
    |
101 |     anyio.sleep(86401)  # error: 116, "async"
102 |     # also checks that we don't break visit_Call
103 |     anyio.run(anyio.sleep(86401))  # error: 116, "async"
    |               ^^^^^^^^^^^^^^^^^^
help: Replace with `anyio.sleep_forever()`
    |
 98 ~     import anyio
 99 |
  …
102 |     # also checks that we don't break visit_Call
103 ~     anyio.run(anyio.sleep_forever())  # error: 116, "async"
    |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `anyio.sleep()` with >24 hour interval should usually be `anyio.sleep_forever()`
   --> ASYNC116.py:110:11
    |
109 |     # catch from import
110 |     await sleep(86401)  # error: 116, "async"
    |           ^^^^^^^^^^^^
help: Replace with `anyio.sleep_forever()`
    |
  5 + from anyio import sleep_forever
  6 + 
  7 |
  …
110 |     # catch from import
111 ~     await sleep_forever()  # error: 116, "async"
    |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `anyio.sleep()` with >24 hour interval should usually be `anyio.sleep_forever()`
   --> ASYNC116.py:119:11
    |
117 |     await anyio.sleep(seconds=1)  # OK
118 |
119 |     await anyio.sleep(delay=86401)  # ASYNC116
    |           ^^^^^^^^^^^^^^^^^^^^^^^^
120 |     await anyio.sleep(seconds=86401)  # OK
    |
help: Replace with `anyio.sleep_forever()`
    |
114 ~     import anyio
115 |
  …
118 |
119 ~     await anyio.sleep_forever()  # ASYNC116
    |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
   --> ASYNC116.py:129:11
    |
127 |     await trio.sleep(delay=1)  # OK
128 |
129 |     await trio.sleep(seconds=86401)  # ASYNC116
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^
130 |     await trio.sleep(delay=86401)  # OK
    |
help: Replace with `trio.sleep_forever()`
    |
124 ~     import trio
125 |
  …
128 |
129 ~     await trio.sleep_forever()  # ASYNC116
    |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
   --> ASYNC116.py:137:11
    |
135 |     from trio import sleep
136 |
137 |     await sleep(18446744073709551616)
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
138 |     await trio.sleep(99999999999999999999)
    |
help: Replace with `trio.sleep_forever()`
    |
134 ~     import trio
135 |     from trio import sleep
136 |
137 ~     await trio.sleep_forever()
    |
note: This is an unsafe fix and may change runtime behavior

ASYNC116 [*] `trio.sleep()` with >24 hour interval should usually be `trio.sleep_forever()`
   --> ASYNC116.py:138:11
    |
137 |     await sleep(18446744073709551616)
138 |     await trio.sleep(99999999999999999999)
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace with `trio.sleep_forever()`
    |
134 ~     import trio
135 |     from trio import sleep
136 |
137 |     await sleep(18446744073709551616)
138 ~     await trio.sleep_forever()
    |
note: This is an unsafe fix and may change runtime behavior
